--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -161,12 +161,12 @@
     {
      "data": {
       "text/plain": [
-       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
-       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
-       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
